<resources>
    <string name="app_name">SuperHeroes24</string>
    <string name="heroes_file_xml">Super Heroes</string>
    <string name="superHero_tittle">Super Hero Name</string>
    <string name="superHeroList">LISTADO DE SUPER HÉROES</string>
    <string name="superhero_description">Descripción superhéroe</string>
    <string name="superhero_name">SUPERHÉROE</string>
    <string name="power_stats_title">Power Stats</string>
    <string name="biography">Biography</string>
    <string name="super_heroes_app">SUPER HEROES APP</string>
    <string name="superherolist">SuperHeroList</string>
    <string name="hero">Hero</string>
    <string name="heroes">Heroes</string>
    <string name="full_name">full_name</string>
    <string name="intelligence">Intelligence</string>
    <string name="strength">Strength</string>
    <string name="speed">Speed</string>
    <string name="durability">Durability</string>
    <string name="power">Power</string>
    <string name="combat">Combat</string>
</resources>