<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="16dp"
    tools:context=".presentation.SuperHeroDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="700dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/superhero_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/superhero_img">

            <TextView
                android:id="@+id/superhero_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="Superhero Name" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/superhero_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/superhero_name"
            tools:text="Full Name" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/superhero_full_name"
        app:cardBackgroundColor="@android:color/white">

        <TextView
            android:id="@+id/superhero_power_stats_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/power_stats_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="8dp" />
    </androidx.cardview.widget.CardView>

    <!-- Card para mostrar las Power Stats -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="12dp"
        app:cardBackgroundColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/superhero_power_stats_label">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            >

            <!-- Inteligencia -->
            <TextView
                android:id="@+id/intelligence_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/intelligence"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/superhero_intelligence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/intelligence_label"/>

            <!-- Strength -->
            <TextView
                android:id="@+id/strength_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/intelligence_label"
                android:text="@string/strength"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/superhero_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/intelligence_label"/>

            <!-- Speed -->
            <TextView
                android:id="@+id/speed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/strength_label"
                android:text="@string/speed"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/superhero_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/strength_label"/>

            <!-- Durabilidad -->
            <TextView
                android:id="@+id/durability_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/speed_label"
                android:text="@string/durability"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/superhero_durability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/speed_label" />

            <!-- Poder -->
            <TextView
                android:id="@+id/power_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/durability_label"
                android:text="@string/power"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/superhero_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/durability_label"/>

            <!-- Combate -->
            <TextView
                android:id="@+id/combat_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/power_label"
                android:text="@string/combat"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/superhero_combat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/power_label"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    </LinearLayout>

</ScrollView>